FIxed Visual bugs on Mobile Browser

--- a/src/app.css
+++ b/src/app.css
@@ -77,17 +77,13 @@
     @apply bg-background text-foreground;
   }
 }
-html{
-  height: 100vh;
-  width: 100vw;
-  overflow:hidden;
-}
 body, #app{
   height: 100vh;
+  min-height: 100%;
   width: 100vw;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow-x: hidden;
   font-family: Arial, Helvetica, sans-serif;
   z-index: -10;
   --font-color:white;
@@ -127,6 +123,7 @@ body, #app{
 }
 .sendui {
   height: 90vh;
+  min-height: 90%;
   width: 80vw;
   background-color: black;
   border-radius: 50px;
